--- a/react-dark-theme-toggle-tutorial-starter-files/package.json
+++ b/react-dark-theme-toggle-tutorial-starter-files/package.json
@@ -1,25 +1,16 @@
 {
-  "name": "islomnumanov.uz",
+  "name": "code",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@material-ui/core": "^4.12.4",
-    "@material-ui/icons": "^4.11.3",
-    "@testing-library/jest-dom": "^5.14.1",
-    "@testing-library/react": "^13.0.0",
-    "@testing-library/user-event": "^13.2.1",
-    "bootstrap": "^5.1.3",
-    "firebase": "^9.8.1",
-    "node-sass": "^7.0.1",
-    "react": "^18.1.0",
-    "react-dom": "^18.1.0",
-    "react-reveal": "^1.2.2",
-    "react-router-dom": "^6.3.0",
+    "@testing-library/jest-dom": "^5.16.4",
+    "@testing-library/react": "^13.0.1",
+    "@testing-library/user-event": "^13.5.0",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
     "react-scripts": "5.0.1",
-    "react-vertical-timeline-component": "^3.5.2",
-    "reactstrap": "^9.0.2",
-    "typewriter-effect": "^2.18.2",
-    "web-vitals": "^2.1.0"
+    "styled-components": "^5.3.5",
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
